--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="md-suzan">
-  <title>confsec</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>hellow world</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="md-suzan" />
+    <title>confsec</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="continer">
+      <h1>THE EARTH</h1>
+    </div>
+  </body>
 </html>
