--- a/index.html
+++ b/index.html
@@ -15,16 +15,26 @@
       <h1>An Essay about me</h1>
       <p>Lorem ipsum dolor sit amet <span class="imp">Consectetur</span> consectetur, adipisicing elit. Quas sed voluptas corrupti cumque delectus reiciendis facere et fugiat officiis molestias? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio saepe harum ipsa rerum architecto, ullam ab ratione eligendi nesciunt tempora deserunt accusamus necessitatibus omnis doloribus minima facere iure veritatis molestias earum! Quae quos autem pariatur dolore esse et ex voluptate culpa ducimus, soluta illo numquam accusamus tempora? Suscipit ipsa nisi magni odio enim! Ipsa, minima aspernatur, non omnis ipsum atque autem repellat voluptate iure, eveniet nemo ea voluptatem facilis delectus vitae quae expedita blanditiis. Delectus eaque hic, facere dolore, rerum repudiandae corporis voluptates in praesentium expedita reprehenderit deleniti enim debitis. Soluta veniam, asperiores minus laboriosam distinctio eveniet ipsum? Error, aliquam.</p>
     </div>
-    <div class="secblog">
+
+    <div id="cowtype">
+
+      <h2>Type of cow</h2>
+
       <div>
-        <img src="https://images.unsplash.com/photo-1682687982470-8f1b0e79151a?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
+        <img src="https://images.unsplash.com/photo-1535435734705-4f0f32e27c83?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" att="img1">
       </div>
+
       <div>
-        <img src="https://images.unsplash.com/photo-1703769605311-a8a837521cbb?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxM3x8fGVufDB8fHx8fA%3D%3D" alt="img2">
+        <img src="https://images.unsplash.com/photo-1525104252592-bca3a8b6c04c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" alt="img2">
       </div>
+
       <div>
-        <img src="https://images.unsplash.com/photo-1703958514300-5510d6eb3c2d?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img3">
+        <img src="https://images.unsplash.com/photo-1504867991871-57c29096e624?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDB8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" alt="img3">
       </div>
+
     </div>
+
+
+
   </body>
 </html>
