--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="md-suzan" />
     <title>confsec</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="img/img.jpg" type="image/x-icon">
   </head>
   <body>
     <div class="continer">
@@ -17,23 +18,23 @@
     </div>
 
     <div id="cowtype">
-
       <h2>Type of cow</h2>
+      <div class="cow-imgs">
+        <div>
+          <img src="https://images.unsplash.com/photo-1535435734705-4f0f32e27c83?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" att="img1">
+        </div>
 
-      <div>
-        <img src="https://images.unsplash.com/photo-1535435734705-4f0f32e27c83?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" att="img1">
-      </div>
+        <div>
+          <img src="https://images.unsplash.com/photo-1525104252592-bca3a8b6c04c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" alt="img2">
+        </div>
 
-      <div>
-        <img src="https://images.unsplash.com/photo-1525104252592-bca3a8b6c04c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" alt="img2">
-      </div>
-
-      <div>
-        <img src="https://images.unsplash.com/photo-1504867991871-57c29096e624?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDB8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" alt="img3">
-      </div>
-
+        <div>
+          <img src="https://images.unsplash.com/photo-1504867991871-57c29096e624?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDB8fGNvdyUyMHBvdHJhaXR8ZW58MHx8MHx8fDA%3D" alt="img3">
+        </div>
+      </div>      
     </div>
 
+    
 
 
   </body>
